<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Q1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador"
            android:textSize="20dp"
            android:textColor="#434343" />

        <TextView
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="#343434"
            android:layout_marginLeft="10dp"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q1"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:textColor="#434343" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        app:srcCompat="@drawable/scorpion" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <RadioButton
            android:id="@+id/radioButton1Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Res1Q1" />

        <RadioButton
            android:id="@+id/radioButton2Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Res2Q1" />

        <RadioButton
            android:id="@+id/radioButton3Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Res3Q1" />

        <RadioButton
            android:id="@+id/radioButton4Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Res4Q1" />

        <RadioButton
            android:id="@+id/radioButton5Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Res5Q1" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonQ1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="240dp"
        android:layout_width="127dp"
        android:textColor="#fff"
        android:background="@drawable/button"
        android:text="@string/Button1" />
</LinearLayout>
